[package]

name = "espeak-ng-sys"
version = "0.0.2"
license = "GPL-3.0"
authors = ["Sergio Tortosa  <sertorbe@gmail.com>"]
description = "Low-level bindings to libespeak-ng"
homepage = "https://github.com/sheosi/espeak-sys-ng"
repository = "https://github.com/sheosi/espeak-sys-ng"
readme = "README.md"
keywords = ["espeak", "espeak-ng", "tts", "speech"]

[dependencies]
libc = "^0.2"
